--add camparison and test

--- a/MABs.ipynb
+++ b/MABs.ipynb
@@ -288,6 +288,7 @@
    "outputs": [],
    "source": [
     "# Load the data file\n",
+    "import numpy\n",
     "data = np.loadtxt('dataset.txt')\n",
     "arms = data[:,0]\n",
     "rewards = data[:,1]\n",
